fix prev Button visibility

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .character-box {
   display: flex;
   flex-direction: column;
-  height: 70%;
+  height: 80%;
   width: 20%;
   background-color: #fff;
   border-radius: 10px;
@@ -49,7 +49,7 @@ body {
 }
 
 .character-box-image {
-  height: 50%;
+  height: 40%;
   background-image: url(https://rickandmortyapi.com/api/character/avatar/381.jpeg);
   background-size: cover;
   background-position: center;
